--- a/style.css
+++ b/style.css
@@ -241,4 +241,19 @@ body {
           padding: .5rem;
           font-size: 12px;
       }
+
+      .header h2 {
+          font-size: .6rem;
+      }
+
+      .toggle p {
+          font-size: .4rem;
+      }
+
+      .btn-blue {
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+      }
 }
