--- a/style.css
+++ b/style.css
@@ -243,11 +243,11 @@ body {
       }
 
       .header h2 {
-          font-size: .6rem;
+          font-size: 15px;
       }
 
-      .toggle p {
-          font-size: .4rem;
+    .header p {
+          font-size: 5px;
       }
 
       .btn-blue {
